/*
 * =====================================================================================
 *
 *       Filename:  slot_reader.h
 *
 *    Description:  read training data in block coordinate fashion
 *
 *        Version:  1.0
 *        Created:  07/08/2018 13:50:10
 *       Revision:  none
 *       Compiler:  gcc
 *
 *         Author:  lacozhang (), lacozhang@gmail.com
 *   Organization:  
 *
 * =====================================================================================
 */

#pragma once
